--- a/app/imports/ui/pages/home-page.html
+++ b/app/imports/ui/pages/home-page.html
@@ -1,13 +1,19 @@
 <template name="Home_Page">
-  <div class="ui middle aligned centered grid text container">
-
-    <div class="four wide column">
-      <img class="ui small circular image" src="/images/meteor-logo.png"/>
-    </div>
-
+  <div style="margin-top: 20px" class="ui middle aligned centered grid text container">
     <div class="eight wide column">
-      <h1>Welcome to this template</h1>
-      <p>Now get to work and modify this app!</p>
+      <h1>Welcome to Alloy</h1>
+      <div class="ui primary animated button" tabindex="0">
+        <div class="visible content">Sign in</div>
+        <div class="hidden content">
+          <i class="sign in icon"></i>
+        </div>
+      </div>
+      <div class="ui animated button" tabindex="0">
+        <div class="visible content">Sign up</div>
+        <div class="hidden content">
+          <i class="edit icon"></i>
+        </div>
+      </div>
     </div>
 
   </div>
